hphp/hack/test/typecheck/defined/assign_in_conditional.php.exp
File "assign_in_conditional.php", line 4, characters 14-14:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
File "assign_in_conditional.php", line 7, characters 14-15:
Variable $x is undefined, or not always defined (did you mean $b instead?) (Naming[2050])
